--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project in angular, koa, rethink",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node webpack.config.js",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -15,17 +16,19 @@
   "bugs": {
     "url": "https://github.com/yankouskia/Agile-board/issues"
   },
-  "scripts": {
-    "dev": "node webpack.development.js",
-    "build" : "node webpack.production.js"
-  },
   "homepage": "https://github.com/yankouskia/Agile-board#readme",
   "devDependencies": {
     "angular": "^1.4.7",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.19.0",
+    "html-webpack-plugin": "^1.6.1",
     "koa": "^1.0.0",
     "koa-route": "^2.4.2",
-    "webpack": "^1.12.2"
+    "node-libs-browser": "^0.5.3",
+    "opener": "^1.4.1",
+    "style-loader": "^0.12.4",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   }
 }
