--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "node webpack.config.js",
-		"start": "webpack-dev-server"
+		"start": "webpack --progress --stats --config webpack.config.js"
 	},
 	"repository": {
 		"type": "git",
@@ -22,7 +22,6 @@
 		"babel-core": "^5.8.25",
 		"babel-loader": "^5.3.2",
 		"css-loader": "^0.19.0",
-		"html-webpack-plugin": "^1.6.1",
 		"koa": "^1.0.0",
 		"koa-route": "^2.4.2",
 		"node-libs-browser": "^0.5.3",
