--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Project in angular, koa, rethink",
   "main": "index.js",
   "scripts": {
-    "dev": "node webpack.config.js",
-    "start": "webpack --progress --stats --config webpack.config.js"
+    "start": "webpack --progress --stats --config webpack.config.js && node --harmony \"./app/server\""
   },
   "repository": {
     "type": "git",
@@ -19,12 +18,20 @@
   "homepage": "https://github.com/yankouskia/Agile-board#readme",
   "devDependencies": {
     "angular": "^1.4.7",
+    "babel": "^5.8.23",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.25",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "json-loader": "^0.5.3",
     "koa": "^1.0.0",
+    "koa-hbs": "^0.7.0",
+    "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
+    "koa-router": "^5.2.3",
+    "koa-static": "^1.4.9",
+    "lodash": "^3.10.1",
     "node-libs-browser": "^0.5.3",
     "opener": "^1.4.1",
     "style-loader": "^0.12.4",
