--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^3.10.1",
     "node-libs-browser": "^0.5.3",
     "opener": "^1.4.1",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
