--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "json-loader": "^0.5.3",
     "koa": "^1.0.0",
+    "koa-compose": "^2.3.0",
     "koa-hbs": "^0.7.0",
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
