--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/yankouskia/Agile-board#readme",
   "devDependencies": {
     "angular": "^1.4.7",
+    "autoprefixer": "^6.0.3",
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "koa": "^1.0.0",
     "koa-compose": "^2.3.0",
@@ -36,6 +38,7 @@
     "lodash": "^3.10.1",
     "node-libs-browser": "^0.5.3",
     "opener": "^1.4.1",
+    "postcss-loader": "^0.6.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2"
