--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-runtime": "^5.8.25",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "json-loader": "^0.5.3",
     "koa": "^1.0.0",
     "koa-compose": "^2.3.0",
@@ -38,6 +39,7 @@
     "opener": "^1.4.1",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.2"
   }
 }
