--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
+    "bootstrap": "^3.3.5",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
