--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Project in angular, koa, rethink",
   "main": "index.js",
   "scripts": {
+    "dev": "node --harmony \"./dev-server.js\" ",
     "start": "webpack --progress --stats --config webpack.config.js && node --harmony \"./app/server\"",
+    "serve": "node --harmony \"./app/server\"",
     "build": "webpack --progress --stats --config webpack.config.js"
   },
   "repository": {
@@ -21,10 +23,13 @@
     "angular": "^1.4.7",
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
     "bootstrap": "^3.3.5",
     "css-loader": "^0.19.0",
+    "eslint": "^1.6.0",
+    "eslint-loader": "^1.1.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.3",
