--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node --harmony \"./dev-server.js\" ",
     "start": "webpack --progress --stats --config webpack.config.js && node --harmony \"./app/server\"",
     "serve": "node --harmony \"./app/server\"",
+    "lint": "eslint -c .eslintrc .",
     "build": "webpack --progress --stats --config webpack.config.js"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/yankouskia/Agile-board#readme",
   "devDependencies": {
     "angular": "^1.4.7",
+    "angular-ui-router": "^0.2.15",
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
