--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
     "bootstrap": "^3.3.5",
+    "bootstrap-less": "^3.3.8",
     "css-loader": "^0.19.0",
     "eslint": "^1.6.0",
     "eslint-loader": "^1.1.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "koa": "^1.0.0",
     "koa-compose": "^2.3.0",
