--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "angular-ui-sortable": "^0.13.4",
     "jquery": "^2.1.4",
     "jquery-ui": "^1.10.5",
+    "ng-annotate-webpack-plugin": "^0.1.2",
     "rethinkdbdash": "^2.1.11"
   }
 }
