--- a/package.json
+++ b/package.json
@@ -56,17 +56,23 @@
   "dependencies": {
     "amd-define-factory-patcher-loader": "^1.0.0",
     "angular-ui-sortable": "^0.13.4",
+    "co-body": "^4.0.0",
+    "exports-loader": "^0.6.2",
     "fs": "0.0.2",
     "http": "0.0.0",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.1.4",
     "jquery-ui": "^1.10.5",
     "koa-favicon": "^1.2.0",
+    "lodash": "^3.10.1",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ng-dialog": "^0.5.5",
+    "node-monkey": "^0.2.16",
     "pouchdb": "^5.0.0",
     "rethinkdbdash": "^2.1.11",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
-    "superagent": "^1.4.0"
+    "superagent": "^1.4.0",
+    "whatwg-fetch": "^0.10.1"
   }
 }
