--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/yankouskia/Agile-board#readme",
   "devDependencies": {
     "angular": "^1.4.7",
+    "angular-strap": "^2.3.6",
+    "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
@@ -49,6 +51,7 @@
     "node-libs-browser": "^0.5.3",
     "opener": "^1.4.1",
     "raw-loader": "^0.5.1",
+    "shortid": "^2.2.4",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2"
@@ -58,15 +61,12 @@
     "angular-ui-sortable": "^0.13.4",
     "co-body": "^4.0.0",
     "exports-loader": "^0.6.2",
-    "fs": "0.0.2",
-    "http": "0.0.0",
     "imports-loader": "^0.6.5",
     "jquery": "^2.1.4",
     "jquery-ui": "^1.10.5",
     "koa-favicon": "^1.2.0",
     "lodash": "^3.10.1",
     "ng-annotate-webpack-plugin": "^0.1.2",
-    "ng-dialog": "^0.5.5",
     "node-monkey": "^0.2.16",
     "pouchdb": "^5.0.0",
     "rethinkdbdash": "^2.1.11",
