--- a/package.json
+++ b/package.json
@@ -40,9 +40,13 @@
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "koa": "^1.0.0",
+    "koa-bodyparser": "^2.0.1",
     "koa-compose": "^2.3.0",
+    "koa-convert": "^1.2.0",
+    "koa-generic-session": "^1.10.0",
     "koa-hbs": "^0.7.0",
     "koa-mount": "^1.3.0",
+    "koa-passport": "^2.0.1",
     "koa-route": "^2.4.2",
     "koa-router": "^5.2.3",
     "koa-static": "^1.4.9",
