--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
     "file-loader": "^0.8.4",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
+    "handlebars": "^4.0",
     "koa": "^1.0.0",
+    "koa-bodyparser": "^2.0",
+    "koa-generic-session": "^1.6",
+    "koa-passport": "^1.2",
+    "koa-render": "^0.2",
     "koa-compose": "^2.3.0",
     "koa-hbs": "^0.7.0",
     "koa-mount": "^1.3.0",
@@ -54,7 +59,11 @@
     "shortid": "^2.2.4",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    "passport-facebook": "^2.0",
+    "passport-google-auth": "^1.0",
+    "passport-local": "^1.0",
+    "passport-twitter": "^1.0"
   },
   "dependencies": {
     "amd-define-factory-patcher-loader": "^1.0.0",
@@ -69,7 +78,6 @@
     "ng-annotate-webpack-plugin": "^0.1.2",
     "node-monkey": "^0.2.16",
     "pouchdb": "^5.0.0",
-    "rethinkdbdash": "^2.1.11",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "superagent": "^1.4.0",
